01-AULAS/AULA04/03-sg.tf
resource "aws_security_group" "sg_default" {
  name        = "vpc_terraform_allow_default"
  description = "Allow default inbound traffic and all outbound traffic"
  vpc_id     = "vpc-0702f3e84145d8d8c"

  ingress {
    description = "Allow SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow ICMP"
    from_port        = -1
    to_port          = -1
    protocol         = "icmp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
